Fix the gaps between rows

--- a/src/styles/MovieCard.css
+++ b/src/styles/MovieCard.css
@@ -1,12 +1,9 @@
 .movieCard {
-    box-sizing: border-box;
     border: 3px solid black;
     padding: 10px;
-    height: 7%;
 }
 
 
-.movieCardPoster{
-  width:auto;
-  height: 30%;
+.movieCardPoster {
+  width: 20vh;
 }
