--- a/src/styles/MoviesContainer.css
+++ b/src/styles/MoviesContainer.css
@@ -1,8 +1,6 @@
 .movieContainer {
     padding: 20px;
     display: grid;
-    grid-template-columns: repeat(5, 1fr);
+    grid-template-columns: repeat(4, 1fr);
     grid-gap: 20px;
-    box-sizing: border-box;
-    grid-template-rows: repeat(8, 17%);
 }
